Bug 823460; start throttled transitions with delays; r=dbaron; a=blocking-basecamp

--HG--
extra : rebase_source : 8e57f7106fd8241556e63076f8dedc0cb72052e7